--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "express-validator": "4.3.0",
+    "feedparser-promised": "1.5.0",
     "mongoose": "^4.13.10",
     "newsapi": "^2.1.0",
     "nodemon": "^1.14.11",
