--- a/client/package.json
+++ b/client/package.json
@@ -3,13 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:3001/",
+  "devDependencies": {
+    "babel-eslint": "^7.1.1",
+    "concurrently": "3.0.0",
+    "eslint": "^3.12.2",
+    "eslint-plugin-flowtype": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^3.0.2",
+    "eslint-plugin-react": "^6.8.0",
+    "react-scripts": "1.1.0"
+  },
   "dependencies": {
     "axios": "0.17.1",
     "history": "4.2.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.0"
+    "react-router-dom": "^4.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
