--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "body-parser": "^1.18.2",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
+    "express-flash": "0.0.2",
     "express-validator": "4.3.0",
     "feedparser-promised": "1.5.0",
     "mongoose": "^4.13.10",
