--- a/package.json
+++ b/package.json
@@ -4,17 +4,20 @@
   "private": true,
   "dependencies": {
     "axios": "^0.17.1",
+    "bcrypt": "1.0.3",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "express-flash": "0.0.2",
+    "express-session": "1.15.6",
     "express-validator": "4.3.0",
     "feedparser-promised": "1.5.0",
     "memory-cache": "0.2.0",
     "mongoose": "^4.13.10",
     "newsapi": "^2.1.0",
     "nodemon": "^1.14.11",
+    "passport-local": "1.0.0",
     "redis": "2.8.0",
     "save": "^2.3.2"
   },
