--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^4.13.10",
     "newsapi": "^2.1.0",
     "nodemon": "^1.14.11",
+    "passport": "0.4.0",
     "passport-local": "1.0.0",
     "redis": "2.8.0",
     "save": "^2.3.2"
