--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "express-session": "1.15.6",
     "express-validator": "4.3.0",
     "feedparser-promised": "1.5.0",
+    "jwt-simple": "0.5.1",
     "memory-cache": "0.2.0",
     "mongoose": "^4.13.10",
     "newsapi": "^2.1.0",
     "nodemon": "^1.14.11",
     "passport": "0.4.0",
+    "passport-http-bearer": "1.0.1",
     "passport-local": "1.0.0",
     "redis": "2.8.0",
     "save": "^2.3.2"
