--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bcrypt": "1.0.3",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
+    "connect-ensure-login": "^0.1.1",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "express-flash": "0.0.2",
@@ -19,6 +20,7 @@
     "newsapi": "^2.1.0",
     "nodemon": "^1.14.11",
     "passport": "0.4.0",
+    "passport-auth0": "^0.6.1",
     "passport-http-bearer": "1.0.1",
     "passport-local": "1.0.0",
     "redis": "2.8.0",
