--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ config.env
 .env.development.local
 .env.test.local
 .env.production.local
+newsfeed-6ec35467fa410.json
 
 npm-debug.log*
 yarn-debug.log*
