--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@google-cloud/language": "1.1.0",
     "axios": "^0.17.1",
     "bcrypt": "1.0.3",
     "bluebird": "^3.5.1",
