--- a/package.json
+++ b/package.json
@@ -10,16 +10,16 @@
     "body-parser": "^1.18.2",
     "connect-ensure-login": "^0.1.1",
     "dotenv": "^4.0.0",
-    "express": "^4.16.2",
+    "express": "4.16.3",
     "express-flash": "0.0.2",
     "express-session": "1.15.6",
     "express-validator": "4.3.0",
     "feedparser-promised": "1.5.0",
     "jwt-simple": "0.5.1",
     "memory-cache": "0.2.0",
-    "mongoose": "^4.13.10",
-    "newsapi": "^2.1.0",
-    "nodemon": "^1.14.11",
+    "mongoose": "4.13.12",
+    "newsapi": "2.2.0",
+    "nodemon": "1.17.2",
     "passport": "0.4.0",
     "passport-auth0": "^0.6.1",
     "passport-http-bearer": "1.0.1",
@@ -29,12 +29,12 @@
   },
   "devDependencies": {
     "concurrently": "3.0.0",
-    "eslint": "^4.16.0",
+    "eslint": "4.18.2",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-import": "2.9.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.6.0"
+    "eslint-plugin-react": "7.7.0"
   },
   "scripts": {
     "client": "cd client && npm start",
