--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:3001/",
+  "proxy": "http://localhost:3001",
 	"homepage": "http://www.colinrabyniuk.com/newsfeed",
   "devDependencies": {
     "babel-eslint": "^7.1.1",
@@ -21,8 +21,8 @@
     "react-router-dom": "^4.2.2"
   },
   "scripts": {
-    "start": "REACT_APP_API_URL=http://localhost:3001 react-scripts start",
-    "build": "REACT_APP_API_URL=http://159.89.126.3:3001 react-scripts build",
+    "start": "REACT_APP_API_URL=http://localhost:3001 REACT_APP_BASENAME=/ react-scripts start",
+    "build": "REACT_APP_API_URL=http://159.89.126.3:3001 REACT_APP_BASENAME=/newsfeed react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
