--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "express-session": "1.15.6",
     "express-validator": "4.3.0",
     "feedparser-promised": "1.5.0",
+    "http": "0.0.0",
+    "https": "1.0.0",
     "mongoose": "4.13.12",
     "nodemon": "1.17.2",
+    "request": "2.87.0",
     "save": "^2.3.2"
   },
   "devDependencies": {
