--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@google-cloud/language": "1.1.0",
     "axios": "^0.17.1",
+    "bcrypt": "2.0.1",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "connect-ensure-login": "^0.1.1",
