--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "connect-ensure-login": "^0.1.1",
+    "connect-mongo": "2.0.1",
     "dotenv": "^4.0.0",
     "express": "4.16.3",
     "express-flash": "0.0.2",
