Enhancement: Better error handling so react component can handle when feedparser errors out items or full feeds

--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:3001",
-	"homepage": "http://www.colinrabyniuk.com/newsfeed",
+  "homepage": "http://www.colinrabyniuk.com/newsfeed",
   "devDependencies": {
     "babel-eslint": "^7.1.1",
     "concurrently": "3.0.0",
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "0.17.1",
     "history": "4.2.0",
+    "prop-types": "15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2"
