--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "chai": "4.1.2",
+    "chai-as-promised": "7.1.1",
     "concurrently": "3.0.0",
     "eslint": "4.18.2",
     "eslint-config-airbnb": "^16.1.0",
@@ -39,6 +40,6 @@
     "server": "nodemon server.js",
     "dev": "concurrently --kill-others \"mongod\" \"npm run client\" \"npm run server\"",
     "lint": "eslint index.js",
-		"test": "mocha"
+    "test": "mocha"
   }
 }
