--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "chai": "4.1.2",
     "chai-as-promised": "7.1.1",
+    "chai-http": "4.0.0",
     "concurrently": "3.0.0",
     "eslint": "4.18.2",
     "eslint-config-airbnb": "^16.1.0",
